// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`scenario output snapshots delegation-outputs JSON 1`] = `
"=== command: rd run snapshot-delegation-outputs.runbook.md ===
{"type":"runbook_started","title":"Delegation with Outputs","prompted":false,"statePath":".rundown/runs/<runbookId>.json","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-delegation-outputs.runbook.md"},"seq":1}
{"type":"step_entered","position":{"current":"1","total":2},"stepName":"1","description":"Set message","hasCommand":true,"commandCode":"rd echo --result pass","commandLang":"bash","isSubstep":false,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-delegation-outputs.runbook.md"},"seq":2}
{"type":"command_started","command":"rd echo --result pass","displayCommand":"rd echo --result pass","position":{"current":"1","total":2},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-delegation-outputs.runbook.md"},"seq":3}
{"type":"command_completed","command":"rd echo --result pass","success":true,"exitCode":0,"position":{"current":"1","total":2},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-delegation-outputs.runbook.md"},"seq":4}
{"type":"step_transitioned","action":"CONTINUE","from":"1","at":"2.1","result":"PASS","command":"rd echo --result pass","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-delegation-outputs.runbook.md"},"seq":5}
{"type":"step_entered","position":{"current":"2","total":2,"substep":"1"},"stepName":"1","description":"Child task","prompt":"Delegated to child runbook.","hasCommand":false,"isSubstep":true,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-delegation-outputs.runbook.md"},"seq":6}

=== command: rd delegate snapshot-child.runbook.md --step 2.1 ===
{
  "kind": "delegate",
  "action": "delegated",
  "step": "2.1",
  "runbook": "snapshot-child.runbook.md",
  "token": "<token>",
  "token_hash": "<tokenHash>",
  "parent_run_id": "<runbookId>"
}

=== command: rd claim <token> ===
{"type":"runbook_started","title":"Snapshot Child","prompted":false,"statePath":".rundown/runs/<runbookId>.json","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-child.runbook.md"},"seq":1}
{"type":"step_entered","position":{"current":"1","total":1},"stepName":"1","description":"Child step","prompt":"The message is: hello from snapshot parent","hasCommand":false,"isSubstep":false,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-child.runbook.md"},"seq":2}
{"action":"claimed","message":"Claimed <token> -> <workdir>/.rundown/runbooks/snapshot-child.runbook.md","token":"<token>","claim_id":"<claimId>","run_id":"<runbookId>","runbook":"<workdir>/.rundown/runbooks/snapshot-child.runbook.md","parent_run_id":"<runbookId>","parent_step":"2.1","kind":"action"}
"
`;

exports[`scenario output snapshots delegation-outputs text 1`] = `
"=== command: rd run snapshot-delegation-outputs.runbook.md --text ===
File:     snapshot-delegation-outputs.runbook.md
State:    .rundown/runs/<runbookId>.json
Action:   START

## 1. Set message

$ rd echo --result pass


─── 2.1 ──────────────────────────────────────────
Action:   CONTINUE
From:     1
Command:  rd echo --result pass
Result:   PASS
At:       2.1

### 2.1. Child task

Delegated to child runbook.

=== command: rd delegate snapshot-child.runbook.md --step 2.1 --text ===
DELEGATED  step 2.1 -> snapshot-child.runbook.md
Token:     <token>

RD_CLAIM_TOKEN=<token>

=== command: rd claim <token> --text ===
File:     snapshot-child.runbook.md
State:    .rundown/runs/<runbookId>.json
Action:   START

## 1. Child step

The message is: hello from snapshot parent
Claimed <token> -> <workdir>/.rundown/runbooks/snapshot-child.runbook.md
"
`;

exports[`scenario output snapshots multi-step JSON 1`] = `
"{"type":"runbook_started","title":"Multi Step","prompted":false,"statePath":".rundown/runs/<runbookId>.json","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":1}
{"type":"step_entered","position":{"current":"1","total":3},"stepName":"1","description":"First","hasCommand":true,"commandCode":"rd echo --result pass","commandLang":"bash","isSubstep":false,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":2}
{"type":"command_started","command":"rd echo --result pass","displayCommand":"rd echo --result pass","position":{"current":"1","total":3},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":3}
{"type":"command_completed","command":"rd echo --result pass","success":true,"exitCode":0,"position":{"current":"1","total":3},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":4}
{"type":"step_transitioned","action":"CONTINUE","from":"1","at":"2","result":"PASS","command":"rd echo --result pass","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":5}
{"type":"step_entered","position":{"current":"2","total":3},"stepName":"2","description":"Second","hasCommand":true,"commandCode":"rd echo --result pass","commandLang":"bash","isSubstep":false,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":6}
{"type":"command_started","command":"rd echo --result pass","displayCommand":"rd echo --result pass","position":{"current":"2","total":3},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":7}
{"type":"command_completed","command":"rd echo --result pass","success":true,"exitCode":0,"position":{"current":"2","total":3},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":8}
{"type":"step_transitioned","action":"CONTINUE","from":"2","at":"3","result":"PASS","command":"rd echo --result pass","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":9}
{"type":"step_entered","position":{"current":"3","total":3},"stepName":"3","description":"Third","hasCommand":true,"commandCode":"rd echo --result pass","commandLang":"bash","isSubstep":false,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":10}
{"type":"command_started","command":"rd echo --result pass","displayCommand":"rd echo --result pass","position":{"current":"3","total":3},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":11}
{"type":"command_completed","command":"rd echo --result pass","success":true,"exitCode":0,"position":{"current":"3","total":3},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":12}
{"type":"step_transitioned","action":"COMPLETE","from":"3","at":"3","result":"PASS","command":"rd echo --result pass","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":13}
{"type":"runbook_completed","finalPosition":{"current":"3","total":3},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-multi-step.runbook.md"},"seq":14}
"
`;

exports[`scenario output snapshots multi-step text 1`] = `
"File:     snapshot-multi-step.runbook.md
State:    .rundown/runs/<runbookId>.json
Action:   START

## 1. First

$ rd echo --result pass


─── 2 ────────────────────────────────────────────
Action:   CONTINUE
From:     1
Command:  rd echo --result pass
Result:   PASS
At:       2

## 2. Second

$ rd echo --result pass


─── 3 ────────────────────────────────────────────
Action:   CONTINUE
From:     2
Command:  rd echo --result pass
Result:   PASS
At:       3

## 3. Third

$ rd echo --result pass


─── 3 ────────────────────────────────────────────
Action:   COMPLETE
From:     3
Command:  rd echo --result pass
Result:   PASS
At:       3
Runbook:  COMPLETE
"
`;

exports[`scenario output snapshots retry JSON 1`] = `
"{"type":"runbook_started","title":"Retry","prompted":false,"statePath":".rundown/runs/<runbookId>.json","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":1}
{"type":"step_entered","position":{"current":"1","total":1},"stepName":"1","description":"Flaky step","hasCommand":true,"commandCode":"rd echo --result fail --result pass","commandLang":"bash","isSubstep":false,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":2}
{"type":"command_started","command":"rd echo --result fail --result pass","displayCommand":"rd echo --result fail --result pass","position":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":3}
{"type":"command_completed","command":"rd echo --result fail --result pass","success":false,"exitCode":1,"position":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":4}
{"type":"step_transitioned","action":"RETRY","from":"1","at":"1","result":"FAIL","command":"rd echo --result fail --result pass","retryAttempt":1,"retryMax":1,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":5}
{"type":"step_entered","position":{"current":"1","total":1},"stepName":"1","description":"Flaky step","hasCommand":true,"commandCode":"rd echo --result fail --result pass","commandLang":"bash","isSubstep":false,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":6}
{"type":"command_started","command":"rd echo --result fail --result pass","displayCommand":"rd echo --result fail --result pass","position":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":7}
{"type":"command_completed","command":"rd echo --result fail --result pass","success":true,"exitCode":0,"position":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":8}
{"type":"step_transitioned","action":"COMPLETE","from":"1","at":"1","result":"PASS","command":"rd echo --result fail --result pass","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":9}
{"type":"runbook_completed","finalPosition":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-retry.runbook.md"},"seq":10}
"
`;

exports[`scenario output snapshots retry text 1`] = `
"File:     snapshot-retry.runbook.md
State:    .rundown/runs/<runbookId>.json
Action:   START

## 1. Flaky step

$ rd echo --result fail --result pass


─── 1 ────────────────────────────────────────────
Action:   RETRY (1/1)
From:     1
Command:  rd echo --result fail --result pass
Result:   FAIL
At:       1

## 1. Flaky step

$ rd echo --result fail --result pass


─── 1 ────────────────────────────────────────────
Action:   COMPLETE
From:     1
Command:  rd echo --result fail --result pass
Result:   PASS
At:       1
Runbook:  COMPLETE
"
`;

exports[`scenario output snapshots simple-complete JSON 1`] = `
"{"type":"runbook_started","title":"Simple Complete","prompted":false,"statePath":".rundown/runs/<runbookId>.json","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-complete.runbook.md"},"seq":1}
{"type":"step_entered","position":{"current":"1","total":1},"stepName":"1","description":"Single step","hasCommand":true,"commandCode":"rd echo --result pass","commandLang":"bash","isSubstep":false,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-complete.runbook.md"},"seq":2}
{"type":"command_started","command":"rd echo --result pass","displayCommand":"rd echo --result pass","position":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-complete.runbook.md"},"seq":3}
{"type":"command_completed","command":"rd echo --result pass","success":true,"exitCode":0,"position":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-complete.runbook.md"},"seq":4}
{"type":"step_transitioned","action":"COMPLETE","from":"1","at":"1","result":"PASS","command":"rd echo --result pass","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-complete.runbook.md"},"seq":5}
{"type":"runbook_completed","finalPosition":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-complete.runbook.md"},"seq":6}
"
`;

exports[`scenario output snapshots simple-complete text 1`] = `
"File:     snapshot-simple-complete.runbook.md
State:    .rundown/runs/<runbookId>.json
Action:   START

## 1. Single step

$ rd echo --result pass


─── 1 ────────────────────────────────────────────
Action:   COMPLETE
From:     1
Command:  rd echo --result pass
Result:   PASS
At:       1
Runbook:  COMPLETE
"
`;

exports[`scenario output snapshots simple-stop JSON 1`] = `
"{"type":"runbook_started","title":"Simple Stop","prompted":false,"statePath":".rundown/runs/<runbookId>.json","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-stop.runbook.md"},"seq":1}
{"type":"step_entered","position":{"current":"1","total":1},"stepName":"1","description":"Single step","hasCommand":true,"commandCode":"rd echo --result fail","commandLang":"bash","isSubstep":false,"prompted":false,"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-stop.runbook.md"},"seq":2}
{"type":"command_started","command":"rd echo --result fail","displayCommand":"rd echo --result fail","position":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-stop.runbook.md"},"seq":3}
{"type":"command_completed","command":"rd echo --result fail","success":false,"exitCode":1,"position":{"current":"1","total":1},"timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-stop.runbook.md"},"seq":4}
{"type":"step_transitioned","action":"STOP","from":"1","at":"1","result":"FAIL","command":"rd echo --result fail","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-stop.runbook.md"},"seq":5}
{"type":"runbook_stopped","position":{"current":"1","total":1},"reason":"fail_transition","timestamp":"<timestamp>","runbookId":"<runbookId>","runbook":{"source":"project","path":"snapshot-simple-stop.runbook.md"},"seq":6}
"
`;

exports[`scenario output snapshots simple-stop text 1`] = `
"File:     snapshot-simple-stop.runbook.md
State:    .rundown/runs/<runbookId>.json
Action:   START

## 1. Single step

$ rd echo --result fail


─── 1 ────────────────────────────────────────────
Action:   STOP
From:     1
Command:  rd echo --result fail
Result:   FAIL
At:       1
Runbook:  STOP
"
`;
